# nut-push-notifier

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: index.html  script.js  styles.css
src/: args.rs  main.rs  notify.rs  ups_state.rs  ups_status.rs
src/commands/: command.rs  list.rs  mod.rs  watch.rs
src/ups/: connection.rs  mod.rs  ups_state.rs
src/utils/: args.rs  mod.rs  notify.rs
src/ws/: events.rs  mod.rs  ws_server.rs
