[package]
name = "nut-push-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
chrono = { version = "0.4.19", features = ["alloc" , "clock"]}
reqwest = { version = "0.11.10", features = ["blocking", "json"]}
rups = "0.5.2"
