[package]
name = "nut-push-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
color-eyre = "0.6.1"
reqwest = { version = "0.11.10", features = ["blocking", "json"]}
rups = "0.5.2"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"]}
